--- a/app/pubspec.yaml
+++ b/app/pubspec.yaml
@@ -24,10 +24,10 @@ dependencies:
   flutter:
     sdk: flutter
 
-  kraken: ^0.6.6+2
-  kraken_video_player: ^0.2.3
-  kraken_webview: ^0.2.3
-  kraken_websocket: ^0.0.3
+  kraken: ^0.7.0
+  kraken_video_player: ^0.3.0
+  kraken_webview: ^0.3.0
+  kraken_websocket: ^0.1.0
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.0
