--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -18,10 +18,14 @@ jobs:
         run: echo ${BRANCH_NAME}
       - name: Clone The Code
         run: git clone -b "${BRANCH_NAME}" git@github.com:openkraken/cli.git --depth=1 "${RUNNER_WORKSPACE}/cli_${BRANCH_NAME}";
-      - run: cd ${RUNNER_WORKSPACE}/cli_${BRANCH_NAME} && sh build.sh
-      - run: cd ${RUNNER_WORKSPACE}/cli_${BRANCH_NAME} && npm publish
-        env:
-          NODE_AUTH_TOKEN: ${{secrets.ACCESS_TOKEN}}
+      - name: Build Cli Vendor App
+        run: cd ${RUNNER_WORKSPACE}/cli_${BRANCH_NAME} && sh build.sh
+      - name: Npm install
+        run: cd ${RUNNER_WORKSPACE}/cli_${BRANCH_NAME} && npm install
+      - name: Upload Cli Vendor App
+        run: cd ${RUNNER_WORKSPACE}/cli_${BRANCH_NAME} && node scripts/upload.js
+      - name: Npm Publish
+        run: cd ${RUNNER_WORKSPACE}/cli_${BRANCH_NAME} && npm publish
       - name: Clean Up
         if: ${{ always() }}
         run: rm -rf ${RUNNER_WORKSPACE}/cli_${BRANCH_NAME}
