--- a/app/pubspec.yaml
+++ b/app/pubspec.yaml
@@ -20,6 +20,10 @@ version: 1.0.0+1
 environment:
   sdk: ">=2.7.0 <3.0.0"
 
+dependency_overrides:
+  kraken:
+    path: ../../kraken/kraken
+
 dependencies:
   flutter:
     sdk: flutter
