--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -19,7 +19,7 @@ jobs:
       - name: Clone The Code
         run: git clone -b "${BRANCH_NAME}" git@github.com:openkraken/cli.git --depth=1 "${RUNNER_WORKSPACE}/cli_${BRANCH_NAME}";
       - name: Npm install
-        run: cd ${RUNNER_WORKSPACE}/cli_${BRANCH_NAME} && npm install
+        run: cd ${RUNNER_WORKSPACE}/cli_${BRANCH_NAME} && npm install --ignore-scripts
       - name: Build Cli Vendor App
         run: cd ${RUNNER_WORKSPACE}/cli_${BRANCH_NAME} && sh build.sh
       - name: Upload Cli Vendor App
