--- a/app/pubspec.yaml
+++ b/app/pubspec.yaml
@@ -28,11 +28,11 @@ dependencies:
   flutter:
     sdk: flutter
 
-  kraken: ^0.9.0-rc.5
+  kraken: ^0.9.0
   kraken_devtools: ^0.4.0-dev.0
-  kraken_video_player: ^1.0.0-dev.3
-  kraken_webview: ^1.0.0-dev.2
-  kraken_websocket: ^1.0.0-dev.2
+  kraken_video_player: ^1.0.0
+  kraken_webview: 1.0.1
+  kraken_websocket: ^1.0.0
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.0
