--- a/package.json
+++ b/package.json
@@ -16,9 +16,10 @@
   ],
   "author": "Kraken Team",
   "dependencies": {
+    "chalk": "^2.4.2",
     "commander": "^4.0.1",
-    "temp": "^0.9.1",
-    "chalk": "^2.4.2"
+    "qjsc": "^0.2.4",
+    "temp": "^0.9.1"
   },
   "devDependencies": {
     "ali-oss": "^6.5.1",
