--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -15,7 +15,7 @@ env:
 
 jobs:
   build_macos:
-    runs-on: self-hosted
+    runs-on: macos-latest
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-node@v2
@@ -32,7 +32,7 @@ jobs:
       - name: Npm install
         run: npm install --ignore-scripts
       - name: Build Cli Vendor App
-        run: sh build.sh
+        run: sh build_macos.sh
       - name: Upload Cli Vendor App
         run: OSS_AK=${OSS_AK} OSS_SK=${OSS_SK} node scripts/upload.js
       - uses: JS-DevTools/npm-publish@v1
@@ -57,7 +57,7 @@ jobs:
       - name: Npm install
         run: npm install --ignore-scripts
       - name: Build Cli Vendor App
-        run: sh build.sh
+        run: sh build_linux.sh
       - name: Upload Cli Vendor App
         run: OSS_AK=${OSS_AK} OSS_SK=${OSS_SK} node scripts/upload.js
       - uses: JS-DevTools/npm-publish@v1
