--- a/app/pubspec.yaml
+++ b/app/pubspec.yaml
@@ -28,7 +28,7 @@ dependencies:
   flutter:
     sdk: flutter
 
-  kraken: ^0.10.0
+  kraken: ^0.10.0+2
   kraken_video_player: ^2.0.0
   kraken_webview: ^2.0.0
   kraken_websocket: ^2.0.0
