--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -53,6 +53,8 @@ jobs:
       - uses: subosito/flutter-action@v1
         with:
           flutter-version: ${{ env.flutterVersion }}
+      - name: Install gtk
+        run: sudo apt-get install libgtk-3-dev
       - run: flutter config --enable-linux-desktop
       - run: flutter doctor -v
       - name: Npm install
