--- a/app/pubspec.yaml
+++ b/app/pubspec.yaml
@@ -29,9 +29,9 @@ dependencies:
     sdk: flutter
 
   kraken: ^0.10.1
-  kraken_video_player: ^2.0.0
-  kraken_webview: ^2.0.0
-  kraken_websocket: ^2.0.0
+  kraken_video_player: 2.0.0
+  kraken_webview: 2.0.0
+  kraken_websocket: 2.0.0
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.0
