--- a/package.json
+++ b/package.json
@@ -1,20 +1,22 @@
 {
-  "name": "@openkraken/cli",
-  "version": "0.11.1",
-  "description": "Command Line Tools for Kraken",
+  "name": "@openwebf/cli",
+  "version": "0.12.0",
+  "description": "Command Line Tools for WebF",
   "bin": {
-    "kraken": "bin/kraken.js"
+    "webf": "bin/webf.js"
   },
   "scripts": {
-    "postinstall": "node install.js",
     "build": "sh build.sh",
     "upload": "node scripts/upload.js"
   },
   "files": [
     "bin",
-    "install.js",
     "lib"
   ],
+  "optionalDependencies": {
+    "@openwebf/cli-linux": "^0.12.0",
+    "@openwebf/cli-macos": "^0.12.4"
+  },
   "author": "Kraken Team",
   "dependencies": {
     "chalk": "^2.4.2",
