--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -11,7 +11,7 @@ on:
 env:
   nodeVersion: "16"
   cmakeVersion: "3.22.x"
-  flutterVersion: "2.8.1"
+  flutterVersion: "3.0.5"
 
 jobs:
   build_macos:
@@ -30,11 +30,14 @@ jobs:
       - run: flutter config --enable-macos-desktop
       - run: flutter doctor -v
       - name: Npm install
-        run: npm install --ignore-scripts
-      - name: Build Cli Vendor App
+        run: npm install
+      - name: Build Cli Vendor Appc
         run: sh build_macos.sh
-      - name: Upload Cli Vendor App
-        run: OSS_AK=${{ secrets.ALIYUN_OSS_AK }} OSS_SK=${{ secrets.ALIYUN_OSS_SK }} node scripts/upload.js
+      - name: Upload Platform package
+      - uses: JS-DevTools/npm-publish@v1
+        with:
+          token: ${{ secrets.NPM_TOKEN }}
+          package: ./platforms/cli-macos
       - uses: JS-DevTools/npm-publish@v1
         with:
           token: ${{ secrets.NPM_TOKEN }}
@@ -58,11 +61,14 @@ jobs:
       - run: flutter config --enable-linux-desktop
       - run: flutter doctor -v
       - name: Npm install
-        run: npm install --ignore-scripts
+        run: npm install
       - name: Build Cli Vendor App
         run: bash build_linux.sh
-      - name: Upload Cli Vendor App
-        run: OSS_AK=${{ secrets.ALIYUN_OSS_AK }} OSS_SK=${{ secrets.ALIYUN_OSS_SK }} node scripts/upload.js
+      - name: Upload Platform package
+      - uses: JS-DevTools/npm-publish@v1
+        with:
+          token: ${{ secrets.NPM_TOKEN }}
+          package: ./platforms/cli-linux
       - uses: JS-DevTools/npm-publish@v1
         with:
           token: ${{ secrets.NPM_TOKEN }}
