--- a/app/linux/CMakeLists.txt
+++ b/app/linux/CMakeLists.txt
@@ -1,8 +1,8 @@
 cmake_minimum_required(VERSION 3.10)
 project(runner LANGUAGES CXX)
 
-set(BINARY_NAME "kraken_example")
-set(APPLICATION_ID "com.example.kraken")
+set(BINARY_NAME "webf_example")
+set(APPLICATION_ID "com.example.webf")
 
 cmake_policy(SET CMP0063 NEW)
 
