--- a/platforms/cli-linux/package.json
+++ b/platforms/cli-linux/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@openwebf/cli-linux",
-  "version": "0.12.0",
+  "version": "0.12.1",
   "description": "Command Line Tools for WebF",
   "engines": {
     "node": ">=10"
@@ -12,7 +12,7 @@
     "x64"
   ],
   "files": [
-    "app"
+    "app.tar.gz"
   ],
   "author": "openwebf team",
   "license": "MIT"
