--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@openwebf/cli",
-  "version": "0.13.3",
+  "version": "0.14.0-beta.0",
   "description": "Command Line Tools for WebF",
   "bin": {
     "webf": "bin/webf.js"
