--- a/app/pubspec.yaml
+++ b/app/pubspec.yaml
@@ -28,8 +28,8 @@ dependencies:
   flutter:
     sdk: flutter
 
-  webf: ^0.13.3
-  webf_websocket: ^1.1.0
+  webf: ^0.14.0-beta.4+1
+  webf_websocket: ^1.2.0
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.0
