--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "author": "Kraken Team",
   "dependencies": {
+    "@openwebf/cli": "^0.14.0-beta.3",
     "chalk": "^2.4.2",
     "commander": "^5.1.0",
     "qjsc": "^0.2.4",
