--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@openwebf/cli",
-  "version": "0.14.0-beta.13",
+  "version": "0.14.0",
   "description": "Command Line Tools for WebF",
   "bin": {
     "webf": "bin/webf.js"
@@ -14,12 +14,11 @@
     "lib"
   ],
   "optionalDependencies": {
-    "@openwebf/cli-linux": "^0.14.0-beta.1",
-    "@openwebf/cli-macos": "^0.14.0-beta.3"
+    "@openwebf/cli-linux": "^0.14.0",
+    "@openwebf/cli-macos": "^0.14.0"
   },
   "author": "Kraken Team",
   "dependencies": {
-    "@openwebf/cli": "^0.14.0-beta.3",
     "chalk": "^2.4.2",
     "commander": "^5.1.0",
     "qjsc": "^0.2.4",
