--- a/platforms/cli-macos/package.json
+++ b/platforms/cli-macos/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@openwebf/cli-macos",
-  "version": "0.14.0-beta.13",
+  "version": "0.14.0",
   "description": "Command Line Tools for WebF",
   "engines": {
     "node": ">=10"
