fix: fix publish scripts

--- a/.github/workflows/npm-publish-beta.yml
+++ b/.github/workflows/npm-publish-beta.yml
@@ -75,7 +75,7 @@ jobs:
           token: ${{ secrets.NPM_TOKEN }}
           tag: beta
   build_windows:
-    runs-on: macos-latest
+    runs-on: windows-latest
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-node@v2
@@ -87,7 +87,7 @@ jobs:
       - uses: subosito/flutter-action@v2
         with:
           flutter-version: ${{ env.flutterVersion }}
-      - run: flutter config --enable-macos-desktop
+      - run: flutter config --enable-windows-desktop
       - run: flutter doctor -v
       - name: Npm install
         run: npm install
