--- a/platforms/cli-windows/package.json
+++ b/platforms/cli-windows/package.json
@@ -12,7 +12,7 @@
       "x64"
     ],
     "files": [
-      "app.tar.gz"
+      "app.zip"
     ],
     "author": "openwebf team",
     "license": "MIT"
