--- a/platforms/cli-linux/package.json
+++ b/platforms/cli-linux/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@openwebf/cli-linux",
-  "version": "0.15.0-beta.3+1",
+  "version": "0.15.0-beta.4",
   "description": "Command Line Tools for WebF",
   "engines": {
     "node": ">=10"
